# PLVS

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  THIRD-PARTY-NOTICES.md  bench-spectrogram-snap.mjs  eslint-plugin-audiometer-adr-theme.js  eslint-plugin-plvs-adr-theme.js  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vitest.setup.js
.github/workflows/: build-ffmpeg-sidecar-macos.yml  ci.yml  deploy-landing.yml  deploy-pages.yml  dev-build.yml  release.yml
docs/: README.md  architecture.md  cli.md  design-tokens.md  ffmpeg-sidecar-build.md  licenses-audit.md  loudness-references.md  prd.md
docs/adr/: 0001-ui-layout-vs-shadcn-theme.md  0002-theme-id-and-appearance.md  0003-device-identity-layering.md  0004-keep-three-vad-engines.md
docs/architecture-maps/: README.md  audio-data-flow.md  frontend-module-map.md  ipc-boundary.md  rust-module-map.md  system-overview.md  tooling.md
landing/: index.html  index.test.js
landing/docs/: index.html  index.test.js
scripts/: audio-code-changed.mjs  audio-code-changed.test.mjs  build-updater-manifest.mjs  build-updater-manifest.test.mjs  bump-version.mjs  capture-rig.mjs  capture-rig.test.mjs  changelog-release-body.mjs  changelog-release-body.test.mjs  check-release-state.mjs  fetch-ffmpeg-sidecar.mjs  generate-agent-discovery.mjs  generate-theme-fallbacks.mjs  generate-tray-icon.mjs  generate-tray-icons.mjs  history-chunk-size-benchmark.mjs  history-perf-benchmark.mjs  history-perf-benchmark.test.js  preflight-release.mjs  run-release-gate.mjs  smoke-capture.mjs  smoke-file-analysis.mjs  soak-capture.mjs  tauriDependencyContract.test.js  tauriSecurityConfig.test.js  verify-macos-dmg.sh  verify-versions.mjs  verify-windows-installer.ps1
shared/: analysis-request-key-fixtures.json
skills/plvs-dev-build/: SKILL.md
skills/plvs-release/: SKILL.md
src/: App.jsx  App.smoke.test.jsx  App.toolbar.test.js  FloatApp.jsx  index.css  loudnessReferenceProfiles.js  loudnessReferenceProfiles.test.js  main.jsx  meterHealth.js  meterHealth.test.js  scales.js  uiPreferences.js
src-tauri/: Cargo.toml  Info.plist  build.rs  plvs-agent.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json  default.test.js  dock-accessories.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: tap_bridge.m
src-tauri/nsis/: agent-discovery.nsh  installer-hooks.nsh  path-hooks.nsh
src-tauri/src/: appbar.rs  cli_analyze.rs  cli_analyze_batch.rs  cli_capture.rs  cli_devices.rs  cli_main.rs  cli_path.rs  cli_probe.rs  cli_profile.rs  cli_report.rs  dock.rs  dock_accessories.rs  doctor.rs  glass_effect.rs  lib.rs  main.rs  profile.rs  state.rs  vad.rs  window_state.rs
src-tauri/src/audio/: capture.rs  capture_summary.rs  cpal_backend.rs  device.rs  device_enum.rs  device_id.rs  mod.rs  platform_backend.rs
src-tauri/src/audio/macos/: mod.rs  pcm_shim.rs
src-tauri/src/dsp/: channel_sel.rs  dialogue.rs  filters.rs  gating.rs  loudness.rs  meter.rs  mod.rs  peak.rs  spectrum.rs  spectrum_bank.rs  speech.rs  summary_meter.rs  vectorscope.rs
src-tauri/src/engine/: channel_layout.rs  meter_pipeline.rs  mod.rs
src-tauri/src/file_analysis/: decode.rs  mod.rs  probe.rs  session.rs  summary.rs  types.rs
src-tauri/src/file_analysis/ffmpeg/: decode.rs  locate.rs  mod.rs  probe.rs
src-tauri/src/ipc/: commands.rs  types.rs
src-tauri/tests/: vad_spike.rs
src/analysis/: analysisRequestKeyFormat.test.js  analysisRequests.js  analysisRequests.test.js
src/components/: AddButton.jsx  AppHeader.jsx  AppHeader.test.jsx  AppSettingsOverlays.jsx  AppSettingsOverlays.test.jsx  AppShell.jsx  CaptureDeviceSelect.jsx  CloseConfirmDialog.jsx  CloseConfirmDialog.test.jsx  ColorControl.jsx  ColorControl.test.jsx  FeedbackDialog.jsx  FeedbackDialog.test.jsx  FileAnalysisHistoryMenu.jsx  FileAnalysisHistoryMenu.test.jsx  HelpPopover.jsx  (+45 more)
(+646 files in other folders)
