[package]
name = "plvs"
version = "0.6.3"
description = "PLVS — real-time audio metering (Tauri desktop shell)"
authors = ["SounDoer"]
license = "MIT"
repository = "https://github.com/SounDoer/PLVS"
edition = "2021"
rust-version = "1.95"
default-run = "plvs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "plvs"
path = "src/main.rs"

[build-dependencies]
cc = "1.2.61"
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-log = "2"
cpal = "0.18.1"
realfft = "3.4.0"
rustfft = "6.2.0"
sha2 = "0.11"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
voice_activity_detector = { path = "vendor/voice_activity_detector" }
rubato = "0.16"
# Pin: time 0.3.48 breaks a trait-coherence check in tauri-utils/cookie. The pre-commit hook
# regenerates Cargo.lock (`cargo generate-lockfile`) whenever Cargo.toml changes, which would
# otherwise keep re-bumping time to the broken release. The `=` constraint makes the pin stick.
time = "=0.3.49"
tauri-plugin-dialog = "2.7.1"
firered-vad = "0.1.0"
ten-vad-rs = "0.1.7"

# Glass is macOS-only (see glass_effect.rs) — Windows has no compatible blur mechanism for a
# per-pixel-transparent window, so this dependency isn't needed on that target at all.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
